--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,286 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --font-size-topheadtext: 64px;
+  --font-size-maintext: 20px;
+  --font-size-smalltext: 16px;
+  --font-size-inputtext: 14px;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --color-primary: white;
+  --color-secondary: #F8F8F8;
+  --color-header: #512689;
 }
 
-@media (prefers-color-scheme: dark) {
+
+/* @media (max-width: 376px) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+    --font-size-topheadtext: 64px;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--font-roboto);
 }
 
 html,
 body {
-  max-width: 100vw;
+  height: 100dvh;
+  max-width: 100dvw;
   overflow-x: hidden;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--color-primary);
+  display: flex;
+  flex-direction: column;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+button {
+  cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+#backbutton {
+  left: 80px;
+}
+
+#exitbutton {
+  right: 80px;
+}
+
+/* .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh;
+} */
+
+header {
+  background-color: var(--color-header);
+  position: relative;
+  display: flex;
+  top: 0;
+  height: 265px;
+
+}
+
+header h1 {
+  font-size: var(--font-size-topheadtext);
+  color: var(--color-primary);
+  font-weight: 300;
+  line-height: 75px;
+  margin-bottom: 16px;
+
+  @media (max-width: 376px) {
+    font-size: 36px;
   }
+
+}
+
+header button {
+  position: absolute;
+  top: 32px;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: 1px solid var(--color-secondary);
+  color: var(--color-secondary);
+  background-color: var(--color-header);
+  font-size: var(--font-size-smalltext);
+}
+
+.header_page_crew {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_page_crew p {
+  font-size: var(--font-size-maintext);
+  color: var(--color-secondary);
+  text-align: center;
+  width: 846px;
+
+  @media (max-width: 845px) {
+    width: 100vw;
+    font-size: var(--font-size-smalltext);
+  }
+}
+
+.header_page_partner {
+  align-items: center;
+}
+
+.header_partner_info {
+  display: grid;
+  margin-left: 32px;
+  color: var(--color-primary);
+}
+
+.header_partner_info p {
+  font-size: 32px;
+}
+
+.signup {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 500px;
+  padding: 16px;
+  border-radius: 16px;
+  border: none;
+  box-shadow: 0px 4px 20px 0px #00000014;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  @media (max-width: 500px) {
+    width: 100vw;
+    top: 64px;
+    left: 0;
+    transform: none;
+  }
+}
+
+.signup p {
+  font-size: var(--font-size-maintext);
+}
+
+.signup label {
+  font-size: var(--font-size-smalltext);
+  margin-top: 16px;
+  margin-bottom: 8px;
+}
+
+.signup input {
+  background-color: #F8F8F8;
+  height: 48px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: none;
+  width: 100%;
+  font-size: var(--font-size-inputtext);
+  /* color: #808185; */
+}
+
+.signup input:focus {
+  border: none;
+}
+
+.signup .error {
+  color: red;
+  font-size: 10px;
+  margin-top: 4px
+}
+
+.signup button {
+  background-color: var(--color-header);
+  height: 48px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: none;
+  width: 100%;
+  font-size: var(--font-size-smalltext);
+  color: var(--color-primary);
+  margin-top: 24px;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(4, 305px);
+  gap: 20px;
+  margin: 48px 80px;
+  align-self: center;
+
+  @media (max-width: 376px) {
+    grid-template-columns: 1fr;
+    margin: 32px 35px;
+  }
+}
+
+.card {
+  width: 305px;
+  padding: 36px 20px 20px 20px;
+  border-radius: 10px;
+  background-color: var(--color-primary);
+  border: 1px solid white;
+  box-shadow: 0px 0.9960451126098633px 3.984180450439453px 0px #33333326;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card :first-child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.card :first-child p {
+  margin: 16px 0;
+  font-size: var(--font-size-maintext);
+  line-height: 23px;
+  text-align: center;
+}
+
+.card:hover {
+  border: 1px solid black;
+}
+
+.card .like {
+  padding: 8px;
+  background-color: var(--color-secondary);
+  border-radius: 4px;
+  border: none;
+  width: 30px;
+  height: 28px;
+  align-self: flex-end;
+}
+
+.footer button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: 1px solid black;
+  background-color: var(--color-primary);
+  margin-top: 8px;
+  margin-bottom: 69px;
+  margin-inline: auto;
+
+  @media (max-width: 500px) {
+    margin-top: 0;
+    margin-bottom: 32px;
+  }
+}
+
+.footer button p {
+  line-height: 22px;
+  font-size: var(--font-size-smalltext);
+  margin-right: 8px;
+}
+
+.partner_info {
+  display: flex;
+  font-size: var(--font-size-smalltext);
+  margin-top: 49px;
+}
+
+.partner_info_description {
+  margin-left: 188px;
+  margin-right: 129px;
+  width: 630px;
+}
+
+.partner_contacts_detail {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+.partner_info_contacts p {
+  margin-left: 8px;
 }
